give autosave status an id so it's easy to inspec from outside

--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -39,7 +39,7 @@ data-notebook-path="{{notebook_path | urlencode}}"
 <span id="save_widget" class="pull-left save_widget">
     <span id="notebook_name" class="filename"></span>
     <span class="checkpoint_status"></span>
-    <span class="autosave_status"></span>
+    <span id="notebook_my_autosave_status" class="autosave_status"></span>
 </span>
 
 <span id="kernel_logo_widget">
